--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2007-10-17  Martin Baulig  <martin@ximian.com>
+
+	New temporary work branch for the new trampoline code.
+
+	It is based on r87650.
+
+	Btw. `Plophos' is a planet from `Perry Rhodan'.
+
 2007-10-15  Martin Baulig  <martin@ximian.com>
 
 	HEADS UP: The debugger currently doesn't work with the latest mono
