--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,19 @@
 	it's finished, SVN HEAD will remain stable, but require that specific
 	revision of Mono.
 
+2007-10-24  Martin Baulig  <martin@ximian.com>
+
+	* backend/arch/Instruction.cs: New file.
+	(Instruction): New internal abstract class.
+
+	* backend/arch/X86_Instruction.cs: New file.
+	(X86_Instruction): New internal class; implement `Instruction'
+	here, we use this for both i386 and x86_64.
+
+	* backend/arch/Architecture.cs
+	(Architecture.DoGetCallTarget): Don't make this abstract;
+	implement it here using the new `Instruction' class.
+
 2007-10-16  Martin Baulig  <martin@ximian.com>
 
 	* backend/ILanguageBackend.cs: Removed.
