2007-10-31  Martin Baulig  <martin@ximian.com>
	Merged the Plophos branch.

	* backend/ProcessServant.cs: Reflect latest runtime changes.
	* backend/MonoThreadManager.cs: Reflect latest runtime changes.


svn path=/trunk/debugger/; revision=88571

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 
 	Merged the Plophos branch.
 
+	* backend/ProcessServant.cs: Reflect latest runtime changes.
 	* backend/MonoThreadManager.cs: Reflect latest runtime changes.
 
 	* backend/Inferior.cs
