--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-10-15  Martin Baulig  <martin@ximian.com>
+
+	HEADS UP: The debugger only works on x86_64 at the moment.
+
+	This is only temporary and will be fixed soon.
+
 2007-10-31  Martin Baulig  <martin@ximian.com>
 
 	Merged the Plophos branch.
@@ -80,15 +86,6 @@
 	* languages/mono/MonoLanguageBackend.cs
 	(MonoLanguageBackend.IsTrampolineAddress): New public method.
 	(MonoLanguageBackend.GetTrampoline): FIXME:  temporarily broken.
-
-2007-10-15  Martin Baulig  <martin@ximian.com>
-
-	HEADS UP: The debugger currently doesn't work with the latest mono
-	          from SVN HEAD.  You need to use r87189 for the moment.
-
-	I started working on the problem in a temporary work branch - until
-	it's finished, SVN HEAD will remain stable, but require that specific
-	revision of Mono.
 
 2007-10-30  Martin Baulig  <martin@ximian.com>
 
