--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-11-06  Martin Baulig  <martin@ximian.com>
 
+	* languages/TargetStructType.cs
+	(TargetStructType.GetClass): New public abstract method.
+
+2007-11-06  Martin Baulig  <martin@ximian.com>
+
 	* languages/native/NativeClass.cs
 	(NativeClass): `TargetClass' implementation for native structs.
 
