--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2007-11-22  Martin Baulig  <martin@ximian.com>
+
+	* backend/SingleSteppingEngine.cs
+	(OperationDelegateInvoke): New operation; step through a delegate
+	invocation trampoline.
+
+	* backend/arch/Instruction.cs
+	(Instruction.TrampolineType): Added `DelegateInvoke'.
+
 2007-11-20  Martin Baulig  <martin@ximian.com>
 
 	* test/testsuite/TestDelegate.cs: Temporarily disable this.
