--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,41 @@
+2007-11-28  Martin Baulig  <martin@ximian.com>
+
+	* backend/TargetMemoryAccess.cs
+	(TargetMemoryAccess): Moved `TargetIntegerSize',
+	`TargetLongIntegerSize', `TargetAddressSize', `IsBigEndian',
+	`CanWrite' and `Write*' here from `TargetAccess'.
+	(TargetAccess): Removed everything except `InsertBreakpoint' and
+	`RemoveBreakpoint'.
+
+	* classes/DebuggerSession.cs
+	(IExpressionParser): Operate on `Thread', not `TargetMemoryAccess'.
+	(DebuggerSession.ParseLocation): Likewise.
+
+	* classes/Thread.cs
+	(Thread): Don't derive from `TargetAccess'.
+
+	* classes/Breakpoint.cs
+	(Breakpoint.Resolve): Operate on `Thread', not `TargetMemoryAccess'.
+
+	* backend/ThreadServant.cs
+	(ThreadServant): Don't derive from `TargetAccess' or
+	`TargetMemoryAccess'.	
+
+	* backend/arch/Architecture.cs
+	(Architecture): Operate on `TargetMemoryAccess', not `Thread'.
+
+	* backend/Inferior.cs
+	(Inferior): Derive from `TargetAccess', not `TargetMemoryAccess'.
+
+	* backend/MonoThreadManager.cs
+	(MonoMetadataInfo): Moved into ../languages/mono/MonoRuntime.cs.
+
+	* languages/Target*Object.cs
+	(Target*Object): Operate on `Thread', not `TargetMemoryAccess'.
+
+	* languages/Target*Type.cs
+	(Target*Type): Operate on `Thread', not `TargetMemoryAccess'.
+
 2007-11-22  Martin Baulig  <martin@ximian.com>
 
 	* backend/SingleSteppingEngine.cs
