--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-11-28  Martin Baulig  <martin@ximian.com>
 
+	* backend/arch/X86_Instruction.cs
+	(X86_Instruction.GetMonoTrampoline): New protected abstract method.
+	(X86_Instruction.CheckTrampoline): Implement this here.
+
+2007-11-28  Martin Baulig  <martin@ximian.com>
+
 	* backend/TargetMemoryAccess.cs
 	(TargetMemoryAccess): Moved `TargetIntegerSize',
 	`TargetLongIntegerSize', `TargetAddressSize', `IsBigEndian',
