--- a/ChangeLog
+++ b/ChangeLog
@@ -40,6 +40,78 @@
 	* backend/arch/Architecture_I386.cs
 	(Architecture_I386.GetLMF): Make this work again.
 
+2007-11-28  Martin Baulig  <martin@ximian.com>
+
+	* languages/TargetFunctionType.cs
+	(TargetFunctionType.GetMethodAddress): Removed.
+
+	* languages/mono/MonoClassType.cs
+	(MonoClassType.HardResolveClass): Removed.
+
+	* backend/SingleSteppingEngine.cs
+	(SingleSteppingEngine.OperationRuntimeInvoke): Call
+	GetMethodAddress() directly on the `MonoClassInfo'.
+
+2007-11-28  Martin Baulig  <martin@ximian.com>
+
+	* languages/TargetFundamentalObject.cs
+	(TargetFundamentalObject.GetObject): Added internal overloaded
+	version taking a `TargetMemoryAccess'.
+
+	* backend/SingleSteppingEngine.cs
+	(SingleSteppingEngine): Kill some more `sse.Thread' madness.
+
+	* backend/Inferior.cs
+	(Inferior.RuntimeInvoke): Removed the `Thread' argument.
+
+2007-11-28  Martin Baulig  <martin@ximian.com>
+
+	Renamed `Mono.Debugger.Backends' => `Mono.Debugger.Backend'.
+
+2007-11-28  Martin Baulig  <martin@ximian.com>
+
+	* backend/arch/X86_Instruction.cs
+	(X86_Instruction.GetMonoTrampoline): New protected abstract method.
+	(X86_Instruction.CheckTrampoline): Implement this here.
+
+2007-11-28  Martin Baulig  <martin@ximian.com>
+
+	* backend/TargetMemoryAccess.cs
+	(TargetMemoryAccess): Moved `TargetIntegerSize',
+	`TargetLongIntegerSize', `TargetAddressSize', `IsBigEndian',
+	`CanWrite' and `Write*' here from `TargetAccess'.
+	(TargetAccess): Removed everything except `InsertBreakpoint' and
+	`RemoveBreakpoint'.
+
+	* classes/DebuggerSession.cs
+	(IExpressionParser): Operate on `Thread', not `TargetMemoryAccess'.
+	(DebuggerSession.ParseLocation): Likewise.
+
+	* classes/Thread.cs
+	(Thread): Don't derive from `TargetAccess'.
+
+	* classes/Breakpoint.cs
+	(Breakpoint.Resolve): Operate on `Thread', not `TargetMemoryAccess'.
+
+	* backend/ThreadServant.cs
+	(ThreadServant): Don't derive from `TargetAccess' or
+	`TargetMemoryAccess'.	
+
+	* backend/arch/Architecture.cs
+	(Architecture): Operate on `TargetMemoryAccess', not `Thread'.
+
+	* backend/Inferior.cs
+	(Inferior): Derive from `TargetAccess', not `TargetMemoryAccess'.
+
+	* backend/MonoThreadManager.cs
+	(MonoMetadataInfo): Moved into ../languages/mono/MonoRuntime.cs.
+
+	* languages/Target*Object.cs
+	(Target*Object): Operate on `Thread', not `TargetMemoryAccess'.
+
+	* languages/Target*Type.cs
+	(Target*Type): Operate on `Thread', not `TargetMemoryAccess'.
+
 2007-11-22  Martin Baulig  <martin@ximian.com>
 
 	* backend/SingleSteppingEngine.cs
